# aie9-dense-vectors

./: .env.example  .gitignore  README.md  Session02_RAG_Pipeline.pptx  comparison_app.py  key_concepts.md  pyproject.toml  pythonic_rag_wellness_assistant.ipynb  wellness_assistant_openai_agents.py  wellness_assistant_pydantic_ai.py
aimakerspace/: text_utils.py
