[project]
name = "aie9-dense-vectors"
version = "0.1.0"
description = "Embeddings and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.0.0",
    "openai>=1.59.7",
    "openai-agents>=0.6.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic-ai>=1.40.0",
    "pydantic-ai-slim[tavily]>=1.40.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "sse-starlette>=3.1.2",
    "tavily-python>=0.7.0",
    "uvicorn>=0.40.0",
]
